--- a/notebook/datos_poblacion.ipynb
+++ b/notebook/datos_poblacion.ipynb
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "id": "5d71cfc5-ccdb-47ad-8a89-6ee1040ce23b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_raw = pd.read_csv('raw/31304.csv', sep=';', thousands='.', decimal=',')"
+    "df_raw = pd.read_csv('../data/31304.csv', sep=';', thousands='.', decimal=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "id": "2d10eec5-ea94-41ed-88d2-0cc73879de42",
    "metadata": {
     "scrolled": true
@@ -110,7 +110,7 @@
        "4  Ambos sexos  Total  Total Nacional  1 de julio de 2020  47355685.0"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "id": "bf1a6318-9602-415d-a6cd-c5831d452c13",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "id": "70c4e070-bed0-4bb2-842a-82ee28d81d6c",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "array(['Ambos sexos', 'Hombres', 'Mujeres'], dtype=object)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "id": "f0752381-715c-47e2-9ef7-150ebec5594e",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "       '85 y más años'], dtype=object)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "id": "bf7c8344-1a68-424c-8ff6-699daa24d9d5",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "       '50 Zaragoza', '51 Ceuta', '52 Melilla'], dtype=object)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "id": "429e2503-3097-4c48-9f6b-d7acf09e4256",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
        "       '1 de julio de 1971', '1 de enero de 1971'], dtype=object)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "id": "bb81f9d5-17ea-40b3-8a5c-bd745ee61dea",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "id": "ada6811f-421a-43b2-ae89-17b313d026df",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "id": "7317008b-2715-42ef-8384-12c0dd91ff70",
    "metadata": {},
    "outputs": [],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "id": "6e7cca98-2585-44e3-9024-f2e05a3a83ab",
    "metadata": {},
    "outputs": [],
