Nueva forma de obtener datos haciendo llamadas a la API JSON

--- a/notebook/datos_poblacion.ipynb
+++ b/notebook/datos_poblacion.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "34a7f26b-9ab9-4c88-98f7-73b198ee5295",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "81dfc08c-7f89-4a45-b1ea-a22560da30b9",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "4            05  Islas Canarias"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "4a2581f1-acc7-4ee2-a494-a064a23aa6aa",
    "metadata": {},
    "outputs": [],
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "id": "b96b9965-611f-405e-a37e-a04f451d8773",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "4            05     Ávila"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "ec8b033b-22bb-4bd1-a1e0-e2c132afb2e5",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
        "4            32            12"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "4dbb8015-2abe-43fe-a243-ea3238b0fca3",
    "metadata": {},
    "outputs": [],
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "id": "0239058a-2a35-4e5e-9efc-c9c4bae36b6c",
    "metadata": {
     "scrolled": true
@@ -890,7 +890,7 @@
        "      <th>30</th>\n",
        "      <td>10</td>\n",
        "      <td>11</td>\n",
-       "      <td>Cácere</td>\n",
+       "      <td>Cáceres</td>\n",
        "      <td>Extremadura</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1076,7 +1076,7 @@
        "27            19            08             Guadalajara  Castilla-La Mancha\n",
        "28            45            08                  Toledo  Castilla-La Mancha\n",
        "29            06            11                 Badajoz         Extremadura\n",
-       "30            10            11                  Cácere         Extremadura\n",
+       "30            10            11                 Cáceres         Extremadura\n",
        "31            07            04                Baleares      Islas Baleares\n",
        "32            08            09               Barcelona            Cataluña\n",
        "33            17            09                  Girona            Cataluña\n",
@@ -1100,7 +1100,7 @@
        "51            38            05  Santa Cruz de Tenerife      Islas Canarias"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "id": "813dad9f-4dee-4d1d-847f-3e7c7b4346ce",
    "metadata": {},
    "outputs": [],
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "id": "13e55d12-9cc5-488d-a1d6-a510a0cb9af8",
    "metadata": {},
    "outputs": [],
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "id": "fb1bc74b-b935-4ebe-98d0-e3493a9899b4",
    "metadata": {},
    "outputs": [
@@ -1177,30 +1177,30 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1575269</th>\n",
+       "      <th>1630874</th>\n",
        "      <td>Mujeres</td>\n",
-       "      <td>78 años</td>\n",
-       "      <td>40 Segovia</td>\n",
-       "      <td>1 de enero de 1980</td>\n",
-       "      <td>536.899673</td>\n",
+       "      <td>88 años</td>\n",
+       "      <td>45 Toledo</td>\n",
+       "      <td>1 de julio de 1997</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>F</td>\n",
-       "      <td>78</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>40</td>\n",
+       "      <td>88</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Sexo     Edad  Provincias             Periodo  population sex  \\\n",
-       "1575269  Mujeres  78 años  40 Segovia  1 de enero de 1980  536.899673   F   \n",
+       "            Sexo     Edad Provincias             Periodo  population sex  age  \\\n",
+       "1630874  Mujeres  88 años  45 Toledo  1 de julio de 1997         NaN   F   88   \n",
        "\n",
-       "         age  year code_ine_prov  \n",
-       "1575269   78  1980            40  "
+       "         year code_ine_prov  \n",
+       "1630874  1997            45  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "id": "d6ff716f-b4eb-436d-8d97-bbc588867a2a",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1328,7 @@
        "573252    0  2020           nan  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "id": "cdefa492-8221-4ff7-9d91-a7a43acf158e",
    "metadata": {},
    "outputs": [
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "id": "cd9667ba-03a1-45c5-854c-1c0f1a605686",
    "metadata": {},
    "outputs": [],
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "id": "86b2b8aa-a209-4a9f-bf6a-ecc844e3a6f4",
    "metadata": {},
    "outputs": [],
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "id": "1370b405-1bce-4558-8dac-8853a983496d",
    "metadata": {},
    "outputs": [],
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "id": "9f99ebea-64ad-4812-b2b2-6d7ebe06d0be",
    "metadata": {},
    "outputs": [
@@ -1447,33 +1447,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>593494</th>\n",
-       "      <td>Mujeres</td>\n",
-       "      <td>7 años</td>\n",
-       "      <td>34 Palencia</td>\n",
-       "      <td>1 de julio de 1987</td>\n",
-       "      <td>1250.179484</td>\n",
-       "      <td>F</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1987</td>\n",
-       "      <td>34</td>\n",
-       "      <td>07</td>\n",
-       "      <td>Palencia</td>\n",
-       "      <td>Castilla y León</td>\n",
+       "      <th>163384</th>\n",
+       "      <td>Hombres</td>\n",
+       "      <td>29 años</td>\n",
+       "      <td>32 Ourense</td>\n",
+       "      <td>1 de julio de 2022</td>\n",
+       "      <td>1395.969132</td>\n",
+       "      <td>M</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>32</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Ourense</td>\n",
+       "      <td>Galicia</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Sexo    Edad   Provincias             Periodo   population sex  \\\n",
-       "593494  Mujeres  7 años  34 Palencia  1 de julio de 1987  1250.179484   F   \n",
+       "           Sexo     Edad  Provincias             Periodo   population sex  \\\n",
+       "163384  Hombres  29 años  32 Ourense  1 de julio de 2022  1395.969132   M   \n",
        "\n",
-       "        age  year code_ine_prov code_ine_ccaa name_prov        name_ccaa  \n",
-       "593494    7  1987            34            07  Palencia  Castilla y León  "
+       "        age  year code_ine_prov code_ine_ccaa name_prov name_ccaa  \n",
+       "163384   29  2022            32            12   Ourense   Galicia  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "id": "a36f7cee-49c9-4f92-8cfd-bb7f85ab5201",
    "metadata": {},
    "outputs": [],
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "id": "1fb73f81-2599-42c4-8e0a-44e5124bd816",
    "metadata": {},
    "outputs": [],
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "id": "cf4ce416-9a7a-42d9-9990-3bea83cbf0ea",
    "metadata": {},
    "outputs": [
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "id": "8581e8a9-6ec0-483b-968b-9060ef70fdc4",
    "metadata": {},
    "outputs": [
@@ -1565,7 +1565,7 @@
       "----\n",
       "name_prov\n",
       "[nan 'Albacete' 'Alicante' 'Almería' 'Álava' 'Asturias' 'Ávila' 'Badajoz'\n",
-      " 'Baleares' 'Barcelona' 'Bizkaia' 'Burgos' 'Cácere' 'Cádiz' 'Cantabria'\n",
+      " 'Baleares' 'Barcelona' 'Bizkaia' 'Burgos' 'Cáceres' 'Cádiz' 'Cantabria'\n",
       " 'Castellón' 'Ciudad Real' 'Córdoba' 'A Coruña' 'Cuenca' 'Gipuzkoa'\n",
       " 'Girona' 'Granada' 'Guadalajara' 'Huelva' 'Huesca' 'Jaén' 'León' 'Lleida'\n",
       " 'Lugo' 'Madrid' 'Málaga' 'Murcia' 'Navarra' 'Ourense' 'Palencia'\n",
