Se han completado las colecciones del primer DB

--- a/notebook/datos_nacimiento_API.ipynb
+++ b/notebook/datos_nacimiento_API.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "bb3b85e2-f8bc-4e5f-9443-2b324191b8f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pymongo import MongoClient\n",
+    "from collections import defaultdict\n",
+    "from urllib.parse import quote_plus\n",
     "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "119f1673-f7ab-4252-9ce5-a9dd4ff54748",
    "metadata": {},
    "outputs": [],
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "id": "32587a50-ff15-4404-8a7d-35e1614c92cc",
    "metadata": {},
    "outputs": [],
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "id": "808fb526-bf1d-4611-9604-ea7d97ae586d",
    "metadata": {},
    "outputs": [
@@ -167,7 +169,7 @@
        "4         1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "id": "0c629dcf-0dcf-4155-b9ba-4a7879c35900",
    "metadata": {},
    "outputs": [
@@ -329,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "id": "681ee149-c99c-42f4-a103-aee73e781e35",
    "metadata": {},
    "outputs": [],
@@ -355,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "id": "2238e475-acea-429f-9cfa-656e67eda193",
    "metadata": {},
    "outputs": [
@@ -435,7 +437,7 @@
        "151                        Andalucía  Total     2019  69397.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "id": "2fb1810c-2fe2-4595-900b-355d7da5aa80",
    "metadata": {
     "scrolled": true
@@ -493,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "id": "a4385a8f-0e7e-41d4-b029-ccf6a2adca11",
    "metadata": {},
    "outputs": [],
@@ -547,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "id": "14ff0a29-ced4-4971-be05-aa98a3a17a4b",
    "metadata": {},
    "outputs": [
@@ -627,7 +629,7 @@
        "4                            Total  Total     1979  601992.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "id": "d2ac0df8-0f3e-48ac-a272-f954096c2276",
    "metadata": {},
    "outputs": [
@@ -671,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "id": "04e1fbf1-2f16-48ad-861d-ddfcc0bfc067",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1105,7 @@
        "48                            Total  Total     2023  320656.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,6 +1113,351 @@
    "source": [
     "df2.head(49)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "13a645a0-4933-4249-a92e-6a6a2fb0432a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final= df2.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "f2ae5743-dff2-4bbf-a724-beb5851a3f51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final[\"sex\"] = df_final[\"Sexo\"].map({\"Hombres\": \"M\", \"Mujeres\": \"F\", \"Total\": \"T\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "e49cc4ce-c5bf-4ced-9738-7b29429a8068",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final.rename(columns={\"Total\": \"births\", \"Periodo\": \"year\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "4617c6d6-57a7-47ff-a7a0-1c8df08d9a63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Comunidades y Ciudades Autónomas</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>year</th>\n",
+       "      <th>births</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2085</th>\n",
+       "      <td>Galicia</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>19327.0</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Comunidades y Ciudades Autónomas   Sexo  year   births sex\n",
+       "2085                          Galicia  Total  2002  19327.0   T"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "288646ea-d92d-4db4-905b-1cee48b0e8a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Total', 'Andalucía', 'Aragón', 'Asturias, Principado de', 'Balears, Illes', 'Canarias', 'Cantabria', 'Castilla - La Mancha', 'Castilla y León', 'Cataluña', 'Ceuta', 'Comunitat Valenciana', 'Extranjero', 'Extremadura', 'Galicia', 'Madrid, Comunidad de', 'Melilla', 'Murcia, Región de', 'Navarra, Comunidad Foral de', 'País Vasco', 'Rioja, La']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(df_final['Comunidades y Ciudades Autónomas'].unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "c0678707-7d79-4097-a30a-f0128d4e1fc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_codigos_ccaa_ine = pd.read_csv('../data/codigos_ine_prov_ccaa/codigos_ccaa.csv', sep=';', dtype={\n",
+    "        'cod': 'string', \n",
+    "        'nombre_ine': 'string',\n",
+    "    })\n",
+    "df_codigos_ccaa_mongo = pd.read_csv('../data/codigos_ine_prov_ccaa/codigos_ccaa_sin_CeutaMelilla.csv', sep=';', dtype={\n",
+    "        'cod_ccaa': 'string', \n",
+    "        'name': 'string',\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "3627c425-d096-4ace-b657-ad6899a99e96",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Mapear nombre -> código INE\n",
+    "# Creamos un dict de mapeo a partir de df_codigos_ccaa_ine\n",
+    "map_name_to_code = dict(\n",
+    "    zip(df_codigos_ccaa_ine['nombre_ine'], df_codigos_ccaa_ine['cod'])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "ecb5ab18-86ee-43df-8077-0c7f6ebd20f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_name_to_code['Total'] = \"Total\"\n",
+    "map_name_to_code['Extranjero'] = \"Extranjero\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "537e0ff0-b848-4b1c-86f3-7585b1983fed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aplicamos el mapeo para crear la columna code_ine_ccaa en df_final\n",
+    "df_final['code_ine_ccaa'] = df_final['Comunidades y Ciudades Autónomas'].map(map_name_to_code)\n",
+    "\n",
+    "# Comprueba que no haya NaN inesperados\n",
+    "missing = df_final[df_final['code_ine_ccaa'].isna()]['Comunidades y Ciudades Autónomas'].unique()\n",
+    "if len(missing):\n",
+    "    print(\"No se han encontrado códigos para estos nombres:\", missing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "d65d031f-6994-4023-9c49-da3ddb494326",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Total',\n",
+       " '01',\n",
+       " '02',\n",
+       " '03',\n",
+       " '04',\n",
+       " '05',\n",
+       " '06',\n",
+       " '08',\n",
+       " '07',\n",
+       " '09',\n",
+       " '18',\n",
+       " '10',\n",
+       " 'Extranjero',\n",
+       " '11',\n",
+       " '12',\n",
+       " '13',\n",
+       " '19',\n",
+       " '14',\n",
+       " '15',\n",
+       " '16',\n",
+       " '17']"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(df_final['code_ine_ccaa'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "6714b20a-74c9-46cb-94d2-0008751c2b4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mapear código INE → nombre para Metabase\n",
+    "# Creamos un dict de mapeo a partir de df_codigos_ccaa_mongo\n",
+    "map_code_to_mongo_name = dict(\n",
+    "    zip(df_codigos_ccaa_mongo['cod_ccaa'], df_codigos_ccaa_mongo['name'])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "f6c11794-5dd1-4a84-ba16-ab182db5db28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_code_to_mongo_name[\"Total\"] = \"Total\"\n",
+    "map_code_to_mongo_name[\"18\"] = \"Ceuta\"\n",
+    "map_code_to_mongo_name[\"19\"] = \"Melilla\"\n",
+    "map_code_to_mongo_name[\"Extranjero\"] = \"Extranjero\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "b6e4bb5d-733e-4f01-9ae8-50dde7567c34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aplicamos el mapeo para crear la columna name_ccaa\n",
+    "df_final['name_ccaa'] = df_final['code_ine_ccaa'] \\\n",
+    "    .map(map_code_to_mongo_name)\n",
+    "\n",
+    "# Verifica ausencias\n",
+    "missing2 = df_final[df_final['name_ccaa'].isna()]['code_ine_ccaa'].unique()\n",
+    "if len(missing2):\n",
+    "    print(\"Estos códigos INE no tienen nombre en tu tabla Mongo:\", missing2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "782bac07-ef11-4c73-8801-830145d7ec9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estructura final:\n",
+      "year                int64\n",
+      "sex              category\n",
+      "births            float64\n",
+      "code_ine_ccaa    category\n",
+      "name_ccaa        category\n",
+      "dtype: object\n",
+      "   year sex    births code_ine_ccaa name_ccaa\n",
+      "0  1975   T  669378.0         Total     Total\n",
+      "1  1976   T  677456.0         Total     Total\n",
+      "2  1977   T  656357.0         Total     Total\n",
+      "3  1978   T  636892.0         Total     Total\n",
+      "4  1979   T  601992.0         Total     Total\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3) Seleccionar solo las columnas definitivas\n",
+    "df_clean = df_final[[\n",
+    "    'year',\n",
+    "    'sex',\n",
+    "    'births',\n",
+    "    'code_ine_ccaa',\n",
+    "    'name_ccaa'\n",
+    "]].copy()\n",
+    "\n",
+    "# Comprobación final\n",
+    "print(\"Estructura final:\")\n",
+    "print(df_clean.dtypes)\n",
+    "print(df_clean.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "8e73384b-de89-4b8b-9ee8-a76a17cb2d0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configurar conexión\n",
+    "usuario = \"jalope\"\n",
+    "contrasena = \"admin\"\n",
+    "host = \"127.0.0.1\"\n",
+    "puerto = \"27250\"\n",
+    "\n",
+    "uri = f\"mongodb://{quote_plus(usuario)}:{quote_plus(contrasena)}@{host}:{puerto}/?directConnection=true\"\n",
+    "client = MongoClient(uri)\n",
+    "db = client[\"tfm_db\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "ad61357d-c46a-4e76-bf46-98f9fb8aa3df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registros en la colección:  3087\n",
+      "Número de filas de df_raw:  3087\n"
+     ]
+    }
+   ],
+   "source": [
+    "coll = db['INE_6507_POBLACION_NACIMIENTOS_RAW']\n",
+    "coll.drop()\n",
+    "coll.insert_many(df_clean.to_dict('records'))\n",
+    "print(\"Registros en la colección: \", coll.count_documents({}))\n",
+    "print(\"Número de filas de df_raw: \", len(df_clean))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9572eff2-b071-4d7b-abe1-81d41b55eb42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
