Actualización del mapa Las Palmas y Santa Cruz estén más cerca de la peninsula

--- a/DB_Demografia/config_mapa.ipynb
+++ b/DB_Demografia/config_mapa.ipynb
@@ -76,12 +76,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e2d6b382-5c4b-403f-ad34-112de56e8008",
+   "metadata": {},
+   "source": [
+    "Ajustamos santa cruz y las palmas para que no queden tan alejadas del mapa"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7e5cd0fa-2de0-45cc-b0e0-cdf1a2cea023",
+   "execution_count": 6,
+   "id": "0800b3f1-1225-4ae8-a058-cf4f4e4431ca",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from shapely.geometry import shape, mapping\n",
+    "from shapely.affinity import translate, scale\n",
+    "\n",
+    "def adjust_canarias(json_input, json_output, dx=10.0, dy=5.0, scale_factor=0.8):\n",
+    "    \"\"\"\n",
+    "    Ajusta la posición y escala de las Islas Canarias en un GeoJSON de provincias.\n",
+    "    \n",
+    "    - dx, dy: traslado en grados (longitud, latitud).\n",
+    "    - scale_factor: factor de escala para reducir tamaño.\n",
+    "    \"\"\"\n",
+    "    # Cargar GeoJSON\n",
+    "    with open(json_input, 'r', encoding='utf-8') as f:\n",
+    "        geo = json.load(f)\n",
+    "\n",
+    "    for feat in geo['features']:\n",
+    "        prov_id = feat['properties'].get('id')\n",
+    "        # Provincias canarias: Las Palmas (35) y Santa Cruz de Tenerife (38)\n",
+    "        if prov_id in ('35', '38'):\n",
+    "            geom = shape(feat['geometry'])\n",
+    "            # Escalar centrado\n",
+    "            geom_scaled = scale(geom, xfact=scale_factor, yfact=scale_factor, origin='centroid')\n",
+    "            # Trasladar\n",
+    "            geom_moved = translate(geom_scaled, xoff=dx, yoff=dy)\n",
+    "            feat['geometry'] = mapping(geom_moved)\n",
+    "\n",
+    "    # Guardar nuevo GeoJSON\n",
+    "    os.makedirs(os.path.dirname(json_output), exist_ok=True)\n",
+    "    with open(json_output, 'w', encoding='utf-8') as f:\n",
+    "        json.dump(geo, f, ensure_ascii=False, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a8b37b7-1ca6-4fef-8cc3-840b52e3ca37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    input_path  = \"../data/mapas/esp_prov_codigos.json\"\n",
+    "    output_path = \"data/mapas/esp_prov_canarias_ajustada.json\"\n",
+    "    # Ajusta con dx: +12 grados, dy: -8 grados, escala al 70%\n",
+    "    adjust_canarias(input_path, output_path, dx=12.0, dy=-8.0, scale_factor=0.7)\n",
+    "    print(f\"GeoJSON con Canarias ajustadas guardado en: {output_path}\")"
+   ]
   }
  ],
  "metadata": {
