Mapas con canarias más cerca de la península

--- a/DB_Demografia/config_mapa.ipynb
+++ b/DB_Demografia/config_mapa.ipynb
@@ -123,14 +123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3a8b37b7-1ca6-4fef-8cc3-840b52e3ca37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GeoJSON con Canarias ajustadas guardado en: ../data/mapas/esp_prov_canarias_ajustada.json\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    input_path  = \"../data/mapas/esp_prov_codigos.json\"\n",
-    "    output_path = \"data/mapas/esp_prov_canarias_ajustada.json\"\n",
+    "    input_path  = \"..data/mapas/esp_prov_codigos.json\"\n",
+    "    output_path = \"../data/mapas/esp_prov_canarias_ajustada.json\"\n",
     "    # Ajusta con dx: +12 grados, dy: -8 grados, escala al 70%\n",
     "    adjust_canarias(input_path, output_path, dx=12.0, dy=-8.0, scale_factor=0.7)\n",
     "    print(f\"GeoJSON con Canarias ajustadas guardado en: {output_path}\")"
